--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     tty: true
     volumes:
       - .:/go/src/work
+    networks:
+      - container-link
   go_ops_db:
     container_name: go_ops_db
     image: mysql:5.7.25
@@ -20,8 +22,7 @@ services:
       - MYSQL_ROOT_PASSWORD=rootpasswd
       - TZ=Asia/Tokyo
     networks:
-      - default
-      - go_ops_network
+      - container-link
   go_ops_phpmyadmin:
     container_name: go_ops_phpmyadmin
     image: phpmyadmin/phpmyadmin
@@ -35,9 +36,13 @@ services:
     ports:
       - 13902:80
     networks:
-      - default
-      - go_ops_network
+      - container-link
 
 networks:
-  go_ops_network:
-    external: true
+  # Prevent generation "default" network automatically
+  default:
+    external:
+      name: bridge
+  # Network segment of inter-container communication
+  container-link:
+    name: go_ops_network
