--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,5 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-local/mysql/storage
+_local/mysql/storage
 !.gitkeep
