--- a/cmd/example/example.ini
+++ b/cmd/example/example.ini
@@ -1,7 +1,7 @@
 ; The following is the DB connection info for a local env.
 ; Never use the following in your production env.
 [example]
-host     = go_rdb_db
+host     = go_db_mysql
 database = example_db
 username = exampleuser
 password = "ZXhhbXBsZXBhc3N3ZA==" ; base64
