--- a/cmd/example/example.ini
+++ b/cmd/example/example.ini
@@ -4,6 +4,6 @@
 host     = go_db_mysql
 database = example_db
 username = exampleuser
-password = "ZXhhbXBsZXBhc3N3ZA==" ; base64
+password = "ZXhhbXBsZXBhc3N3ZA==" ; base64-encoded value of "examplepasswd"
 protocol = tcp
 port     = 3306
