Change config library

--- a/cmd/example/example.ini
+++ b/cmd/example/example.ini
@@ -1,6 +1,6 @@
 ; The following is the DB connection info for a local env.
 ; Never use the following in your production env.
-[example]
+[example_section]
 host     = go_db_mysql
 database = example_db
 username = exampleuser
