--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+cover.html
 _local/mysql/storage
 _local/pgadmin/
 _local/postgres/storage
