--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
     networks:
       - container-link
 
-  go_db_postgres:
-    container_name: go_db_postgres
+  go_db_pgsql:
+    container_name: go_db_pgsql
     image: postgres:14.4-alpine3.16
     volumes:
-      - "./_local/postgres/setup/db:/docker-entrypoint-initdb.d"
-      - "./_local/postgres/setup/table:/docker-entrypoint-initdb.d/ddl"
-      - ./_local/postgres/storage:/var/lib/postgresql/data
+      - "./_local/pgsql/setup/db:/docker-entrypoint-initdb.d"
+      - "./_local/pgsql/setup/table:/docker-entrypoint-initdb.d/ddl"
+      - ./_local/pgsql/storage:/var/lib/pgsql/data
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=exampleuser
@@ -37,7 +37,7 @@ services:
       - 8888:80
     hostname: pgadmin4
     depends_on:
-      - go_db_postgres
+      - go_db_pgsql
     networks:
       - container-link
 
