--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.9"
 services:
 
   go_db_app:
@@ -14,8 +14,8 @@ services:
     container_name: go_db_pgsql
     image: postgres:14.4-alpine3.16
     volumes:
-      - "./_local/pgsql/setup/db:/docker-entrypoint-initdb.d"
-      - "./_local/pgsql/setup/table:/docker-entrypoint-initdb.d/ddl"
+      - ./_local/pgsql/setup/db:/docker-entrypoint-initdb.d
+      - ./_local/pgsql/setup/table:/docker-entrypoint-initdb.d/ddl
       - ./_local/pgsql/storage:/var/lib/pgsql/data
     environment:
       - POSTGRES_DB=postgres
@@ -29,7 +29,7 @@ services:
     container_name: go_db_pgadmin
     image: dpage/pgadmin4:6
     volumes:
-      - "./_local/pgadmin:/var/lib/pgadmin"
+      - ./_local/pgadmin:/var/lib/pgadmin
     environment:
         PGADMIN_DEFAULT_EMAIL: pgadmin@example.com
         PGADMIN_DEFAULT_PASSWORD: pgadminpasswd
@@ -45,10 +45,10 @@ services:
     container_name: go_db_mysql
     image: mysql:8
     volumes:
-      - "./_local/mysql/storage:/var/lib/mysql"
-      - "./_local/mysql/setup/conf:/etc/mysql/conf.d"
-      - "./_local/mysql/setup/db:/docker-entrypoint-initdb.d"
-      - "./_local/mysql/setup/table:/docker-entrypoint-initdb.d/ddl"
+      - ./_local/mysql/storage:/var/lib/mysql
+      - ./_local/mysql/setup/conf:/etc/mysql/conf.d
+      - ./_local/mysql/setup/db:/docker-entrypoint-initdb.d
+      - ./_local/mysql/setup/table:/docker-entrypoint-initdb.d/ddl
     environment:
       - MYSQL_USER=exampleuser
       - MYSQL_PASSWORD=examplepasswd
@@ -61,7 +61,7 @@ services:
     container_name: go_db_phpmyadmin
     image: phpmyadmin/phpmyadmin
     volumes:
-      - "./_local/phpmyadmin/setup/conf/upload.ini:/usr/local/etc/php/conf.d/upload.ini"
+      - ./_local/phpmyadmin/setup/conf/upload.ini:/usr/local/etc/php/conf.d/upload.ini
     environment:
       - PMA_ARBITRARY=0
       - PMA_HOSTS=go_db_mysql
