--- a/_local/mysql/setup/conf/my.cnf
+++ b/_local/mysql/setup/conf/my.cnf
@@ -1,8 +1,24 @@
 [mysqld]
-character-set-server=utf8mb4
+character_set_server=utf8mb4
+collation_server=utf8mb4_bin
+
+# Timezone
+default_time_zone = SYSTEM
+log_timestamps = SYSTEM
+
+# Log
+log_error = /var/log/mysql/mysql-error.log
+
+slow_query_log = 1
+slow_query_log_file = /var/log/mysql/mysql-slow.log
+long_query_time = 5.0
+log_queries_not_using_indexes = 0
+
+general_log = 1
+general_log_file = /var/log/mysql/mysql-query.log
 
 [mysql]
-default-character-set=utf8mb4
+default_character_set=utf8mb4
 
 [client]
-default-character-set=utf8mb4
+default_character_set=utf8mb4
