--- a/_development/app/setup/Dockerfile
+++ b/_development/app/setup/Dockerfile
@@ -25,3 +25,6 @@ RUN go install github.com/kisielk/errcheck@latest && \
     curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest && \
     cd /go/src/work && \
     go mod tidy
+
+RUN cd /go/src/work/_examples/example && \
+    go mod tidy
