--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -6,16 +6,16 @@ on:
 
 jobs:
   golangci-lint:
-    name: golangci-lint
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: golangci-lint
-        uses: reviewdog/action-golangci-lint@v1
+        uses: reviewdog/action-golangci-lint@v2
         with:
           github_token: ${{ github.token }}
           level: warning
+          go_version: "1.19"
           golangci_lint_flags: "--config=.golangci.yml"
           filter_mode: nofilter
           reporter: github-pr-review
