--- a/_development/app/setup/Dockerfile
+++ b/_development/app/setup/Dockerfile
@@ -21,8 +21,7 @@ RUN chown -R sampleuser:samplegroup /go/
 USER sampleuser
 
 # Install Go packages.
-RUN go install github.com/kisielk/errcheck@latest && \
-    go install golang.org/x/vuln/cmd/govulncheck@latest && \
-    curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest && \
+RUN go install golang.org/x/vuln/cmd/govulncheck@latest && \
+    curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin && \
     cd /go/src/work && \
     go mod tidy
