Update config of golangci-lint

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -15,7 +15,6 @@ jobs:
         with:
           github_token: ${{ github.token }}
           level: warning
-          go_version: "1.19"
-          golangci_lint_flags: "--config=.golangci.yml"
+          golangci_lint_flags: "--config=../../golangci.yml"
           filter_mode: nofilter
           reporter: github-pr-review
